--- a/agent/agent.ipynb
+++ b/agent/agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "421f49a9",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,8 @@
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
     "_set_env(\"OPENAI_API_KEY\")\n",
+    "_set_env(\"BRIGHTDATA_API_KEY\")\n",
+    "\n",
     "_set_env(\"LANGSMITH_API_KEY\")\n",
     "os.environ[\"LANGSMITH_TRACING\"] = \"true\"\n",
     "os.environ[\"LANGSMITH_PROJECT\"] = \"pr-passionate-fund-50\""
@@ -23,8 +25,203 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Failed to validate notification: 13 validation errors for ServerNotification\n",
+      "CancelledNotification.method\n",
+      "  Input should be 'notifications/cancelled' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "CancelledNotification.params.requestId\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ProgressNotification.method\n",
+      "  Input should be 'notifications/progress' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "ProgressNotification.params.progressToken\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ProgressNotification.params.progress\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "LoggingMessageNotification.method\n",
+      "  Input should be 'notifications/message' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "LoggingMessageNotification.params.level\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "LoggingMessageNotification.params.data\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ResourceUpdatedNotification.method\n",
+      "  Input should be 'notifications/resources/updated' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "ResourceUpdatedNotification.params.uri\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ResourceListChangedNotification.method\n",
+      "  Input should be 'notifications/resources/list_changed' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "ToolListChangedNotification.method\n",
+      "  Input should be 'notifications/tools/list_changed' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "PromptListChangedNotification.method\n",
+      "  Input should be 'notifications/prompts/list_changed' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error. Message was: method='sse/connection' params={'message': 'SSE Connection established'} jsonrpc='2.0'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available tools: ['search_engine', 'scrape_as_markdown', 'search_engine_batch', 'scrape_batch']\n",
+      "Testing ReAct Agent with available tools...\n",
+      "==================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Failed to validate notification: 13 validation errors for ServerNotification\n",
+      "CancelledNotification.method\n",
+      "  Input should be 'notifications/cancelled' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "CancelledNotification.params.requestId\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ProgressNotification.method\n",
+      "  Input should be 'notifications/progress' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "ProgressNotification.params.progressToken\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ProgressNotification.params.progress\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "LoggingMessageNotification.method\n",
+      "  Input should be 'notifications/message' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "LoggingMessageNotification.params.level\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "LoggingMessageNotification.params.data\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ResourceUpdatedNotification.method\n",
+      "  Input should be 'notifications/resources/updated' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "ResourceUpdatedNotification.params.uri\n",
+      "  Field required [type=missing, input_value={'message': 'SSE Connection established'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "ResourceListChangedNotification.method\n",
+      "  Input should be 'notifications/resources/list_changed' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "ToolListChangedNotification.method\n",
+      "  Input should be 'notifications/tools/list_changed' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error\n",
+      "PromptListChangedNotification.method\n",
+      "  Input should be 'notifications/prompts/list_changed' [type=literal_error, input_value='sse/connection', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/literal_error. Message was: method='sse/connection' params={'message': 'SSE Connection established'} jsonrpc='2.0'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Agent Response:\n",
+      "Here are some of the latest developments in AI:\n",
+      "\n",
+      "1. **Generative AI**: Recent advancements focus on more capable generative AI, including video and voice creation. This technology is becoming increasingly sophisticated, allowing for the creation of synthetic media such as photorealistic videos and digital personas.\n",
+      "\n",
+      "2. **Agentic AI**: This emerging trend involves AI systems capable of taking autonomous actions to complete tasks, moving beyond simple text or image generation.\n",
+      "\n",
+      "3. **Quantum AI**: Researchers are making progress in using quantum computing to enhance machine learning performance, potentially leading to smarter and more energy-efficient AI.\n",
+      "\n",
+      "4. **Robotic \"Skin\"**: New developments in robotic materials allow machines to perceive heat, pain, and pressure, bringing them closer to human-like touch.\n",
+      "\n",
+      "5. **Efficiency & Accessibility**: AI models and hardware are becoming cheaper and more energy-efficient, with open-weight models closing the performance gap with closed ones, lowering barriers to advanced AI.\n",
+      "\n",
+      "6. **Multi-Modal AI**: AI systems are increasingly capable of understanding and generating information across different formats, such as text, images, and voice.\n",
+      "\n",
+      "7. **Ethical AI & Explainability**: There's a growing focus on developing AI that is explainable and aligned with ethical guidelines, especially in protecting vulnerable populations.\n",
+      "\n",
+      "8. **Conversational AI**: Advances in natural language processing are enabling more complex, emotionally intelligent, and context-aware dialogues with AI agents.\n",
+      "\n",
+      "9. **Integration Across Sectors**: AI is being adopted in new ways across industries, from creating AI-powered performance glasses in wearables to automating space collision avoidance and improving cardiovascular diagnostics.\n",
+      "\n",
+      "These developments highlight the rapid evolution of AI technologies and their increasing integration into various sectors. For more detailed information, you can explore sources like [Crescendo AI](https://www.crescendo.ai/news/latest-ai-news-and-updates) and [AI News](https://www.artificialintelligence-news.com/).\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langgraph.prebuilt import create_react_agent\n",
+    "from langchain_mcp_adapters.client import MultiServerMCPClient\n",
+    "import os\n",
+    "\n",
+    "key = os.environ[\"BRIGHTDATA_API_KEY\"]\n",
+    "# Configure MCP client\n",
+    "client = MultiServerMCPClient({\n",
+    "        \"bright_data\": {\n",
+    "            \"url\": \"https://mcp.brightdata.com/sse?token=3cb51f0b938a4d95577d75a257389b93b14162c310866e576f8958aa592c00ab\",\n",
+    "            \"transport\": \"sse\",\n",
+    "        }\n",
+    "    })\n",
+    "\n",
+    "    # Get available tools\n",
+    "tools = await client.get_tools()\n",
+    "print(\"Available tools:\", [tool.name for tool in tools])\n",
+    "\n",
+    "# Configure LLM\n",
+    "llm = ChatOpenAI(model_name=\"gpt-4o\", temperature=0)\n",
+    "\n",
+    "# System prompt for web search agent\n",
+    "system_prompt = \"\"\"\n",
+    "    You are a web search agent with comprehensive scraping capabilities. Your tools include:\n",
+    "    - **search_engine**: Get search results from Google/Bing/Yandex\n",
+    "    - **scrape_as_markdown**: Extract content from any webpage with bot detection bypass\n",
+    "    - **Structured extractors**: Fast, reliable data from major platforms (Amazon, LinkedIn, Instagram, Facebook, X, TikTok, YouTube, Reddit, Zillow, etc.)\n",
+    "    - **Browser automation**: Navigate, click, type, screenshot for complex interactions\n",
+    "\n",
+    "    Guidelines:\n",
+    "    - Use structured web_data_* tools for supported platforms when possible (faster/more reliable)\n",
+    "    - Use general scraping for other sites\n",
+    "    - Handle errors gracefully and respect rate limits\n",
+    "    - Think step by step about what information you need and which tools to use\n",
+    "    - Be thorough in your research and provide comprehensive answers\n",
+    "\n",
+    "    When responding, follow this pattern:\n",
+    "    1. Think about what information is needed\n",
+    "    2. Choose the appropriate tool(s)\n",
+    "    3. Execute the tool(s)\n",
+    "    4. Analyze the results\n",
+    "    5. Provide a clear, comprehensive answer with sources if applicable\n",
+    "    \"\"\"\n",
+    "\n",
+    "# Create ReAct agent\n",
+    "agent = create_react_agent(\n",
+    "        model=llm,\n",
+    "        tools=tools,\n",
+    "        prompt=system_prompt\n",
+    "    )\n",
+    "\n",
+    "# Test the agent\n",
+    "print(\"Testing ReAct Agent with available tools...\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "result = await agent.ainvoke({\n",
+    "        \"messages\": [(\"human\", \"Search for the latest news about AI developments\")]\n",
+    "    })\n",
+    "\n",
+    "print(\"\\nAgent Response:\")\n",
+    "print(result[\"messages\"][-1].content)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -74,7 +271,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.11"
   }
  },
